--- a/views/index.html
+++ b/views/index.html
@@ -86,13 +86,16 @@ let max = Math.max(...arr);
   scoretot.innerHTML += "<u style='color:coral'>Graduatoria:</u><br>"
   // scoretot.innerHTML += "<center>";
   let newx = [];
-  let name = {}"Guariglia Livio"]
+
+  let name = {}
   for (n in keysSorted){
   //let xx = [keysSorted[n],x[keysSorted[n]]];
    newx.push([keysSorted[n],x[keysSorted[n]]]);
-  
+   name[keysSorted[n]] = "";
   }
   console.log(newx);
+  console.log("name variable")
+  console.log(name)
   for (n in keysSorted){
   
     let num = parseInt(n)+1;
@@ -116,6 +119,7 @@ let max = Math.max(...arr);
       // Chi non è nei primi 3...
 
       scoretot.innerHTML += "<div style='background:white;width:50%;color:black'><img src=\"" + name[n]  + ".PNG\" width='100px'> <b style='color:black'>" + keysSorted[n] + "</b><b style='font-size:3.0em'> " + x[keysSorted[n]] + "</b></div><br>";
+      console.log(name[n])
 
       // Se superi 100 punti... 
       if (x[keysSorted[n]] > 100) {
