--- a/views/index.html
+++ b/views/index.html
@@ -1,148 +1,59 @@
+<!-- This is a static file -->
+<!-- served from your routes in server.js -->
+
+<!-- You might want to try something fancier: -->
+<!-- html/nunjucks docs: https://mozilla.github.io/nunjucks/ -->
+<!-- pug: https://pugjs.org/ -->
+<!-- haml: http://haml.info/ -->
+<!-- hbs(handlebars): http://handlebarsjs.com/ -->
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>4CE</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-<style>
-  body{
-    color:white;
-    background-color: black;
-    font-size: 2em;
-  }
-  input {
-    align:middle;
-    text-align:center;
-    width:80%;
-    color:white;
-    background-color: darkblue;
-    font-size: 2em;
-  }
-  </style>
-  
-<body>
+  <head>
+    <title>Welcome to Glitch!</title>
+    <meta name="description" content="A cool thing made with Glitch">
+    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<div class="jumbotron" style="background:coral">
-    <center>Partecipazione 5bS 2019 - 2020<br>
-      <a href="https://formazione.github.io">[ H O M E ]</a>
-  </center>
-  </div>
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style.css">
+  </head>
+  <body>
+    <header>
+      <h1>
+        A Dream of the Future
+      </h1>
+    </header>
 
-    <div id="scoretot"></div>
-
-
-<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDp-mWaWEI07pIdRUhi6vA-salEMRWz4hw",
-    authDomain: "quiz-e5e5a.firebaseapp.com",
-    databaseURL: "https://quiz-e5e5a.firebaseio.com",
-    projectId: "quiz-e5e5a",
-    storageBucket: "quiz-e5e5a.appspot.com",
-    messagingSenderId: "901845403492"
-  };
-  firebase.initializeApp(config);
-  let database = firebase.database();
-  let ref = database.ref("docente_4bs2018");
-  ref.on("value", gotData)
-
-  // IMAGES
-let pen = "<img src='https://images.vexels.com/media/users/3/156893/isolated/preview/048e149a96bdff520db53ddba885cf0d-pen-icon-travel-icons-by-vexels.png' width='30' />";
-let cup = "<img src='https://cdn2.iconfinder.com/data/icons/thesquid-ink-40-free-flat-icon-pack/64/cup-512.png' width='30' />";
-let party ="<img src='http://icons.iconarchive.com/icons/google/noto-emoji-activities/1024/52707-party-popper-icon.png' width='30' >";
-  
-let scoretot = document.getElementById("scoretot");
-scoretot.align = "center";
-function gotData(data){
-  scoretot.innerHTML = "";
-    x = data.val();
-  /*
-    for (n in x){
-     if (x[n] > 100){
-      scoretot.innerHTML += "<b style='color:coral'> " + n[0] + cup +": </b><b style='background:coral'>" + x[n][0]  + " </b> "
-     }
-      else {
-       scoretot.innerHTML += "<b style='color:coral'> [ </b>" + n + ": " + x[n] + " <b style='color:coral'> ] </b> "
-      }
-  }
-  */
-let arr = Object.values(x);
-let min = Math.min(...arr);
-let max = Math.max(...arr);
-  let winner = "";
-  for (n in x){
-    if (parseInt(x[n])==max) winner=n;
-    };
-  
-//scoretot.innerHTML += "<br><center><br>In pole position " + party +  ": <u style='color:coral'>" + winner + "</u> con <b style='background:coral'>" + max + "</b> punti.</center>";
-  
-  let keysSorted = Object.keys(x).sort(function(a,b){return x[b]-x[a]})
-  scoretot.innerHTML += "<u style='color:coral'>Graduatoria:</u><br>"
-  // scoretot.innerHTML += "<center>";
-  let newx = [];
-
-  let name = {}
-  for (n in keysSorted){
-  //let xx = [keysSorted[n],x[keysSorted[n]]];
-   newx.push([keysSorted[n],x[keysSorted[n]]]);
-   name[keysSorted[n]] = "";
-  }
-  console.log(newx);
-  console.log("name variable")
-  console.log(name)
-  for (n in keysSorted){
-  
-    let num = parseInt(n)+1;
-    // nome del primo classificato
-    if (n == 0){
-   scoretot.innerHTML += "<img src='" + keysSorted[n]  + ".PNG'><b style='font-size:2.5em;color:red'>" + num + ". <u>" + keysSorted[n] + "</u></b> ";
-      scoretot.innerHTML += party + cup + "<b style='font-size:2.5em;background:coral'>" + x[keysSorted[n]] + "</b><br><br>"; ;
-    }
-    else if (n == 1){
-      scoretot.innerHTML += "<img src='" + keysSorted[n]  + ".PNG'><b style='font-size:2em;color:coral'>" + num + ". " + keysSorted[n] + "</b> ";
-      if (x[keysSorted[n]] > 100) scoretot.innerHTML += cup;
-      scoretot.innerHTML += "<b style='font-size:2em;background:coral'>" + x[keysSorted[n]] + "</b><br><br>"; ;
-    }
-  else if (n == 2){
-      scoretot.innerHTML += "<img src='" + keysSorted[n]  + ".PNG'><b style='font-size:1.5em;color:gold'>" + num + ". " + keysSorted[n] + "</b> ";
-      if (x[keysSorted[n]] > 100) scoretot.innerHTML += cup;
-      scoretot.innerHTML += "<b style='font-size:1.5em;background:coral'>" + x[keysSorted[n]] + "</b><br><br>"; ;
-    }
-    else {
+    <main>
+      <p class="bold">Oh hi,</p>
       
-      // Chi non è nei primi 3...
+      <p>Tell me your hopes and dreams:</p>
+      
+      <form>
+        <input name="dream" type="text" maxlength="100" placeholder="Dreams!" aria-labelledby="submit-dream">
+        <button type="submit" id="submit-dream">Submit Dream</button>
+      </form>
+      
+      <section class="dreams">
+        <ul id="dreams"></ul>
+      </section>
+    </main>
 
-      scoretot.innerHTML += "<div style='background:white;width:50%;color:black'><img src=\"" + name[n]  + ".PNG\" width='100px'> <b style='color:black'>" + keysSorted[n] + "</b><b style='font-size:3.0em'> " + x[keysSorted[n]] + "</b></div><br>";
-      console.log(name[n])
+    <footer>
+      Made with <a href="https://glitch.com">Glitch</a>!
+    </footer>
+    
+    
+    <!-- import the webpage's client-side javascript file -->
+    <script src="/client.js"></script>
 
-      // Se superi 100 punti... 
-      if (x[keysSorted[n]] > 100) {
-                  scoretot.innerHTML += cup;}
+    <!-- include the Glitch button to show what the webpage is about and
+          to make it easier for folks to view source and remix -->
+    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+    <script src="https://button.glitch.me/button.js"></script>
 
-    }
-    }
-
-}
-</script>
-
-</body>
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
