🏄📈 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -28,18 +28,14 @@
     </header>
 
     <main>
-      <p class="bold">Oh hi,</p>
       
-      <p>Tell me your hopes and dreams:</p>
+      <script>
+      var express = require("express");
+var app = express();
+      if (process.env.USERNAME1=="tierno"){document.write("ciao Tierno")}
+        
+      </script>
       
-      <form>
-        <input name="dream" type="text" maxlength="100" placeholder="Dreams!" aria-labelledby="submit-dream">
-        <button type="submit" id="submit-dream">Submit Dream</button>
-      </form>
-      
-      <section class="dreams">
-        <ul id="dreams"></ul>
-      </section>
     </main>
 
     <footer>
